lib/src/compiler/tests/testdata/errors/21.out
error[E002]: wrong type
 --> line:5:21
  |
5 |     any of them in (1.0..10)
  |                     ^^^ expression should be `integer`, but it is `float`
  |